[project]
name = "predictashop"
version = "0.1.0"
description = "Maquina de previsao de comportamento do consumidor em e-commerce (Olist)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.41",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "scikit-learn==1.5.2",
    "xgboost==2.1.1",
    "lightgbm==4.5.0",
    "shap==0.46.0",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "mlxtend>=0.23",
]

[tool.uv]
package = false
